--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 @import "tailwindcss";
 
 @theme {
@@ -14,5 +15,5 @@
 
 
 * {
-  font-family: "fira code";
+  font-family: "Fira Code", monospace;
 }
